# MyDemoApplication

./: 123456.jks  build.gradle  gradle.properties  图片测试.md
app/: CMakeLists.txt  build.gradle  proguard-rules.pro  proguardMapping.txt
app/src/androidTest/java/com/example/admin/myapplication/: ApplicationTest.java
app/src/baidu/: AndroidManifest.xml
app/src/baidu/java/com/example/admin/myapplication/: HelloActivity.java
app/src/baidu/res/drawable/: ic_launcher.xml
app/src/baidu/res/layout/: hello_baidu_activity.xml  mainlayout.xml
app/src/main/: AndroidManifest.xml
app/src/main/aidl/com/example/admin/myapplication/: IMyAidlInterface.aidl
app/src/main/cpp/: mp3_encoder.cpp  mp3_encoder.h  native-head.h  native-lib.c  native-lib.cpp  native_test.cpp  native_test.h
app/src/main/java/com/example/admin/myapplication/: LeadPagerActivity.java  ListPopAnimationActivity.java  MainActivity.java  ScrollingActivity.java  ServiceGuardActivity.java  TouchEventTransmitActivity.java
app/src/main/java/com/example/admin/myapplication/RxjavaSimple/: AbstractObservableWithUpstream.java  BasicFuseableObserver.java  Disposable.java  Emitter.java  Function.java  Observable.java  ObservableEmitter.java  ObservableOnSubscribe.java  Observer.java  ObserverableSource.java  RxActivity.java
app/src/main/java/com/example/admin/myapplication/Utils/: AppUtile.java  BezierEvaluator.java  ByteUtils.java  Constant.java  FieldUtil.java  PathParser.java  PcmToWavUtil.java  SharedPreferencesHelper.java  ToastUtil.java  TwoTuple.java
app/src/main/java/com/example/admin/myapplication/activity/: AnimationActivity.java  BluetoothActivity.java  Camera2Activity.java  CustomViewFinderScannerActivity.java  (+21 more)
app/src/main/res/anim/: grid_layout_animation.xml  list_anim_layout.xml  slide_right.xml
app/src/main/res/layout/: activity_a.xml  activity_begin_delayed.xml  activity_bluetooth.xml  activity_camera2.xml  activity_delay2.xml  activity_draw_layout.xml  activity_io.xml  activity_lead_pager.xml  activity_love_bezier.xml  activity_map.xml  activity_media_recoder.xml  activity_ndk.xml  activity_okhttp.xml  activity_old_scrolling.xml  activity_order.xml  activity_recycle_view_better.xml  activity_reveal_search.xml  activity_scene.xml  activity_scene_change_bounds.xml  activity_scene_change_transform.xml  activity_scrolling.xml  activity_search.xml  activity_shader_view.xml  activity_splash.xml  activity_transition.xml  activity_transition2.xml  activity_water.xml  activtiy_lead_pager.xml  animation_path_layout.xml  constraint_layout.xml  content_old_scrolling.xml  content_scrolling.xml  coordinator_layout.xml  data_binding.xml  fragment_data_binding.xml  fragment_one_transition.xml  fragment_two_transition.xml  heard_layout.xml  item_bluetooch.xml  item_home.xml  (+19 more)
app/src/main/res/menu/: menu_nav.xml  menu_scrolling.xml
app/src/main/res/values/: attrs.xml  colors.xml  dimens.xml  strings.xml  styles.xml
app/src/test/java/com/example/admin/myapplication/: ExampleUnitTest.java  KTest.kt  TT.java  TTKotlin.kt  Test.kt
(+153 files in other folders)
